# FyuuEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.py  vc140.idb
FyuuEngine/: FyuuEngine.h  (+2 more)
lib/fyuu_glad/: CMakeLists.txt
lib/fyuu_rhi/: CMakeLists.txt
lib/fyuu_rhi/cmake/: collect_headers.cmake  collect_sources.cmake  disable_rtti.cmake
lib/fyuu_rhi/include/: bitwise_enum_op.hpp  boost.hpp  declare_pool.h  declare_pool.hpp  declare_types.hpp  glad.hpp  log.hpp  platform.hpp  webgpu.hpp
lib/fyuu_rhi/module/: command_buffer.cppm  command_queue.cppm  enums.cppm  future.cppm  fyuu_rhi.cppm  gpu_executable.cppm  logical_device.cppm  physical_device.cppm  resource.cppm  sampler.cppm  shader.cppm  shader_data_segment.cppm  surface.cppm  swap_chain.cppm  types.cppm  view.cppm
lib/fyuu_rhi/src/: cmd_buf.cppm  cmd_queue.cppm  cmd_types.cppm  command_buffer.impl.cpp  command_object.cppm  command_queue.impl.cpp  core_types.cppm  device.cppm  fut.cppm  future.impl.cpp  fyuu_rhi.cppm  gpu_exe.cppm  gpu_executable.impl.cpp  inst.cppm  ld.cppm  log.cppm  logical_device.impl.cpp  memory.cppm  phys_dev.cppm  physical_device.impl.cpp  pipeline.cppm  pipeline_types.cppm  res.cppm  res_types.cppm  resource.cppm  resource.impl.cpp  rhi.cppm  rhi.impl.cpp  sampler.cppm  sampler.impl.cpp  sampler_types.cppm  scheduler.cppm  scheduler_types.cppm  shader.cppm  shader.impl.cpp  shader_data_segment.cppm  shader_data_segment.impl.cpp  shader_types.cppm  surf.cppm  surface.impl.cpp  (+5 more)
lib/plastic/: CMakeLists.txt
lib/plastic/cmake/: collect_cxx_modules.cmake
lib/vulkan_hpp/: CMakeLists.txt
src/: CMakeLists.txt  fyuu_engine.impl.cpp  pch.h
src/Framework/: IApplication.cpp  IApplication.h
src/Framework/Application/: Application.cpp  Application.h  FyuuEntry.h  main.cpp
src/Framework/Core/: AppTimer.cpp  AppTimer.h  AssetLoader.cpp  AssetLoader.h  Color.cpp  Color.h  Event.h  FileSystem.cpp  FileSystem.h  GameCore.cpp  GameCore.h  GameTimer.cpp  GameTimer.h  Keycode.h  Logger.cpp  Logger.h  MemoryManager.cpp  MemoryManager.h  MessageBus.cpp  MessageBus.h  MouseButton.h  Scancode.h  ThreadPool.cpp  ThreadPool.h  Window.h
src/Framework/Event/: ApplicationEvent.h  CommonEvent.h  Event.h  KeyboardEvent.h  MessageBus.cpp  MessageBus.h  MouseEvent.h  WindowEvent.h
src/Framework/Math/: Vector4f.cpp
src/Framework/Renderer/: CommandObject.h  GraphicsDevice.h
src/Framework/Utility/: Hash.cpp  Hash.h  Memory.h  RangeMap.h
src/Math/: Vector4f.h
src/Platform/Windows/: AppInstance.cpp  AppInstance.h  D3D12ApplicationBuilder.cpp  D3D12ApplicationBuilder.h  D3D12CommandObject.cpp  D3D12CommandObject.h  D3D12Device.cpp  D3D12Device.h  D3D12Utility.cpp  D3D12Utility.h  OpenGLApplicationBuilder.cpp  OpenGLApplicationBuilder.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLUtility.c  OpenGLUtility.h  VulkanApplicationBuilder.cpp  VulkanApplicationBuilder.h  VulkanDevice.cpp  VulkanDevice.h  WindowsAppInstance.cpp  WindowsAppInstance.h  WindowsEntry.cpp  WindowsGameCore.cpp  WindowsOpenGL.cpp  WindowsUtility.cpp  WindowsUtility.h  WindowsWindow.cpp  WindowsWindow.h
src/Renderer/D3D12/: CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  D3D12Core.cpp  D3D12Core.h  DescriptorHeap.cpp  DescriptorHeap.h  GPUResource.h  LinearAllocator.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h
src/Renderer/OpenGL/: OpenGLCore.cpp  OpenGLCore.h
src/Renderer/Vulkan/: InitVulkan.cpp  VulkanCore.cpp  VulkanCore.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h
src/Runtime/: DLLMain.cpp  pch.h
src/application/: CMakeLists.txt
src/application/editor/: main.cpp
src/application/hello_world/: hello_world.cpp
src/asset/: asset_base.cppm  asset_comm.cppm  mgt_asset.cppm
src/asset/types/: bitmap.cppm
src/concurrency/: circular_buffer.cppm  concurrenct_hash_map.cppm  concurrenct_hash_set.cppm  concurrent_container_base.cppm  concurrent_vector.cppm  coroutine.cppm  synchronized_function.cppm  thread_pool.cppm
src/core/: application.cppm  base_config.cppm  config.cppm  config.interface.cppm  config.node.cppm  config.node.imp.cpp  config.number.cppm  config.number.imp.cpp  config.yaml.cpp  config.yaml.cppm  entry.cpp  layer.cppm  layer_interface.cppm  logger.cppm  logger_interface.cppm  main.cpp  simple_logger.cppm  window_interface.cppm  windows_window.cppm  yaml_config.cppm
src/core/application/: app_inst.cppm  application.cppm  application.impl.cpp  application_types.cppm  entry.cppm  option_parser.cppm  option_parser.impl.cpp  sdl3_application.cppm  sdl3_application.impl.cpp
src/core/configuration/: configuration.cppm  configuration.impl.cpp  configuration_types.cppm  json.cppm  json.impl.cpp  nlohmann_json.cppm  yaml.cppm  yaml.impl.cpp
src/core/io/: log.cppm
src/engine/: CMakeLists.txt
src/graphics/: graphics.cppm  graphics.imp.cpp  graphics.interface.cppm
src/input/: input.cpp
src/logger/: interface.cppm  logger_interface.cppm  simple_logger.cppm
src/math/: base_matrix.cppm  base_quaternion.cppm  base_transform.cppm  base_vector.cppm  eigen_matrix.cppm  eigen_quaternion.cppm  eigen_quaternion.impl.cpp  eigen_transform.cppm  eigen_transform.impl.cpp  eigen_vector.cppm  math.cppm
src/physics/: base.cppm  jolt.cppm  jolt.impl.cpp  physics.cppm
src/platform/: event_system.cppm  window.cppm  window.imp.cpp  window.interface.cppm  window_interface.cppm
src/renderer/: renderer_interface.cppm
src/rendering/: ren_inst.cppm  rhi_context.cppm  rhi_context.impl.cpp
src/rhi/: command_queue.cpp  helper_macros.h  logical_device.cpp  physical_device.cpp  resource.cpp  rhi_error.cppm  rhi_error.impl.cpp  shader_library.cpp  surface.cpp  swap_chain.cpp  video_memory.cpp
src/ui/: imgui.cppm  imgui.impl.cpp  imgui_layer.cppm  ui.cppm  ui.impl.cpp  ui_types.cppm
src/utility/: collective_resource.cppm  defer.cppm  disable_copy.cppm  message_bus.cppm  pointer_wrapper.cppm  singleton.cppm
test/hello triangle/: CMakeLists.txt  hello_triangle.cpp
test/hello_triangle/: CMakeLists.txt  main.cpp
(+522 files in other folders)
